Add gridbuilder for my own sanity, use static grid sizes everywhere